# algaeff

./: CHANGELOG.markdown  CONTRIBUTING.markdown  CONTRIBUTORS.markdown  README.markdown  algaeff.opam  index.html
.github/workflows/: ocaml.yml
algaeff/: index.html
algaeff/Algaeff/: index.html
algaeff/Algaeff/AutoIncrement/: index.html
algaeff/Algaeff/AutoIncrement/Make/: index.html
algaeff/Algaeff/AutoIncrement/module-type-Param/: index.html
algaeff/Algaeff/AutoIncrement/module-type-S/: index.html
algaeff/Algaeff/Fun/: index.html
algaeff/Algaeff/Fun/Deep/: index.html
algaeff/Algaeff/Fun/Shallow/: index.html
algaeff/Algaeff/Mutex/: index.html
algaeff/Algaeff/Mutex/Make/: index.html
algaeff/Algaeff/Mutex/module-type-S/: index.html
algaeff/Algaeff/Reader/: index.html
algaeff/Algaeff/Reader/Make/: index.html
algaeff/Algaeff/Reader/module-type-Param/: index.html
algaeff/Algaeff/Reader/module-type-S/: index.html
algaeff/Algaeff/Sequencer/: index.html
algaeff/Algaeff/Sequencer/Make/: index.html
algaeff/Algaeff/Sequencer/module-type-Param/: index.html
algaeff/Algaeff/Sequencer/module-type-S/: index.html
algaeff/Algaeff/Sigs/: index.html
algaeff/Algaeff/State/: index.html
algaeff/Algaeff/State/Make/: index.html
algaeff/Algaeff/StdlibShim/: index.html
algaeff/Algaeff/UniqueID/: index.html
algaeff/Algaeff/Unmonad/: index.html
src/: Algaeff.ml  Algaeff.mli  AutoIncrement.ml  AutoIncrement.mli  Eff.mli  Fun.ml  Fun.mli  Mutex.ml  Mutex.mli  Reader.ml  Reader.mli  Sequencer.ml  Sequencer.mli  Sigs.ml  State.ml  State.mli  StdlibShim.4.ml  StdlibShim.5.ml  UniqueID.ml  UniqueID.mli  Unmonad.ml  Unmonad.mli  WoundSpawn.ml  WoundSpawn.mli  dune
test/: Example.ml  TestMutex.ml  TestReader.ml  TestSequencer.ml  TestSequencer.mli  TestState.ml  TestUniqueID.ml  Unmonad.ml  dune
(+21 files in other folders)
